# word-similarity

./: README.md  SentenceBert.ipynb
00_単語類似度/: Levenshtein.py  pyproject.toml
